Finish the page content

--- a/index.html
+++ b/index.html
@@ -7,10 +7,21 @@
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <div>
-      <a href="">Download Excursion (Coming soon!)</p>
+      <a href="">Download Excursion (Coming soon!)</a>
+
+      <p>
+        <video src="./resources/videos/excursion.mp4" autoplay muted loop>
+        Your browser does not support the video player.
+        </video>
+      </p>
+      <h2>Your personal travel guide</h2>
+      <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+      <img src="./resources/images/camp.jpg" >
+      <h2>Coming Soon for iPhone and Android</h2>
+      <img src="./resources/images/phone.png" >
+      <p><a href="">Download Excursion (Coming soon!)</a></p>
+
     </div>
-
-
 
 
 
